--- a/.gitignore
+++ b/.gitignore
@@ -17,12 +17,12 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
-/TASKS.md
+TASKS.md
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# IDE's
 .vscode/
 .idea/
